<resources>
    <string name="app_name">Meri Zameen</string>
    <string name="ph_7_to_7.5">All soil nutrients are easily available to plant</string>
    <string name="ph_7.6_to_8">All common soil nutrients are easily available to plants but zinc, iron and boron which are available less in quantity.</string>
    <string name="ph_8.1_to_8.5">There is difficulty in getting Phosphorous from soil</string>
    <string name="ph_8.6">Soil is alkali or saline-alkali soil. Such soils with very low productivity are amended through the application of gypsum and rice as first crop.</string>
    <string name="ec_4">Crops production does not effect.</string>
    <string name="ec_4.1_8">Crops like sugarcane, maize, rice and kenow will effect on this soil</string>
    <string name="ec_8.1_16">Only crops who can bear saltic environment can be easily grown</string>
    <string name="ec_16">Mostly crops are impossible to grown on this soil</string>
    <string name="om_0.86">Soil is weak in organic matter</string>
    <string name="om_0.87_1.29">Soil is good in organic matter</string>
    <string name="om_1.29">Soil is very good in organic matter</string>
    <string name="p_3.5">For better crops production, much quantity of Phosphorous fertilizer is required</string>
    <string name="p_3.6_7">Soil is weak in term of Phosphorous nutrient so for best crop production, Phosphorous fertilizer is required</string>
    <string name="p_7.1_14">Soil is in good condition but use of Phosphorous fetilizer will impact very positive</string>
    <string name="p_14">Soil condition is excellent so use of Phosphorous will depends on crops condition and needs</string>
    <string name="intro">Application is developed by Mahmood Yousaf</string>
    <string name="welcome">WelCome to Meri Zameen</string>
    <string name="commissionShop">Commission Shop Dashboard</string>
    <string name="farmerDashboard">Farmer Dashboard</string>
    <string name="Login">Login Section</string>
    <string name="Signup">Signup Section</string>
    <string name="LoginDetail">Please provide your login details to continue</string>
    <string name="SignupDetail">Please enter your details below for Signup Process</string>
    <string name="SignupAd">Donot have account? Signup</string>
    <string name="AlreadyAccount">Already have account? Click here to login</string>
    <string name="hintEmail">Please enter your email here</string>
    <string name="hintPassword">Please enter your password here</string>
    <string name="hintConformPassword">Please enter again your password here</string>
    <string name="SignupButton">Signup</string>
    <string name="LoginButton">Login</string>
    <string name="English">English</string>
    <string name="Next">Click for next</string>
    <string name="shopName">Please enter your shop name</string>
    <string name="location">Please enter your location</string>
    <string name="phone">Please enter your phone number</string>
    <string name="Urdu">اردو</string>
    <string name="select">Select Image from Gallery</string>
    <string name="Email">Email</string>
    <string name="upload">Click to upload</string>
    <string name="Title">Please enter item name</string>
    <string name="Price">Please enter price per Kg</string>
    <string name="name">Shop Name</string>
    <string name="locationShop">Shop Location</string>
    <string name="contact">Contact Number</string>
    <string name="Logout">Logout</string>
    <string name="shopDetails">Shop Details</string>
    <string name="ImageAnalysis">Image analysis</string>
    <string name="SensorAnalysis">Sensor analysis</string>
    <string name="SelectImage">Select image</string>
    <string name="Prediction">Prediction</string>
    <string name="report">Generate report</string>
    <string name="titleReport">Soil quality report</string>
    <string name="nutrient">Nutrients</string>
    <string name="Desc">Description</string>
    <string name="Home">Home</string>
    <string name="Phos">Phosporous</string>
    <string name="pH">pH</string>
    <string name="OM">Organic matter</string>
    <string name="Ec">Electrical conductivity</string>
    <string name="npk">Sensor analysis</string>
    <string name="sensorIdText">Please enter your unique sensor id</string>
    <string name="con">Connect</string>
    <string name="para">Parameters</string>
    <string name="val">Output</string>
    <string name="h">Humidity</string>
    <string name="temp">Temperature</string>
    <string name="n">Nitrogen</string>
    <string name="Connected">Connected</string>
    <string name="NotConnected">Not Connected</string>
    <string name="sav">Save values</string>
    <string name="saveText">Please enter unique id to save current values</string>
    <string name="k">Potassium</string>
    <string name="show">Show</string>
    <string name="savedValues">Saved records</string>
</resources>