<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ReportGeneration">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/titleReport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:shadowColor="@color/white"
                    android:text="@string/npk"
                    android:textColor="@color/purple_700"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/button"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="#FFC107"
                    android:textSize="15dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="5dp"
                    android:padding="10dp"
                    android:text="@string/con" />
                <EditText
                    android:id="@+id/sensorID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="@color/purple_500"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/sensorIdText"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />



            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ProgressBar
                    android:id="@+id/progCon"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:foregroundGravity="center"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textSize="15dp"
                    android:textColor="@color/teal_200"
                    android:text="@string/NotConnected" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/purple_500"
                    android:text="@string/para"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:background="@color/purple_500"
                    android:text="@string/val"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="2dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#F6F8F8"
                    android:gravity="center"
                    android:text="@string/Phos"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/pTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#FF9800"
                    android:padding="5dp"
                    android:text="0.0"
                    android:gravity="center"
                    android:textColor="@color/black" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="2dp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#F6F8F8"
                    android:gravity="center"
                    android:text="@string/pH"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/phTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#FF9800"
                    android:padding="5dp"
                    android:text="0.0"
                    android:gravity="center"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="2dp">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#F6F8F8"
                    android:gravity="center"
                    android:text="@string/OM"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/omTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#FF9800"
                    android:padding="5dp"
                    android:text="0.0"
                    android:gravity="center"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="2dp">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#F6F8F8"
                    android:gravity="center"
                    android:text="@string/Ec"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/ecTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#FF9800"
                    android:padding="5dp"
                    android:text="0.0"
                    android:gravity="center"
                    android:textColor="@color/black" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="2dp">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#F6F8F8"
                    android:gravity="center"
                    android:text="@string/n"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/nTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#FF9800"
                    android:padding="5dp"
                    android:text="0.0"
                    android:gravity="center"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="2dp">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#F6F8F8"
                    android:gravity="center"
                    android:text="@string/h"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/hTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#FF9800"
                    android:padding="5dp"
                    android:text="0.0"
                    android:gravity="center"
                    android:textColor="@color/black" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="2dp">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#F6F8F8"
                    android:gravity="center"
                    android:text="@string/temp"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#FF9800"
                    android:padding="5dp"
                    android:text="0.0"
                    android:gravity="center"
                    android:textColor="@color/black" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="2dp">

                <Button
                    android:id="@+id/Save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/sav" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="2dp">

                <Button
                    android:id="@+id/Home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/Home" />
            </TableRow>
        </TableLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>